Traccia file grande con Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.CEL filter=lfs diff=lfs merge=lfs -text
 *.xlsx filter=lfs diff=lfs merge=lfs -text
 *.RAW filter=lfs diff=lfs merge=lfs -text
+txt/GSE43488_series_matrix.txt filter=lfs diff=lfs merge=lfs -text
